# PersonalRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: github.py  main.py
src/app/: app.py
src/docs/: media_links.txt  thealphacubicle_projects.json
