[project]
name = "personalrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Srihari Raman",email = "raman.sr@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "streamlit (>=1.38.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
